<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/title_size"
        android:text="@string/venturesity"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/output_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/output"
        android:textSize="@dimen/sub_title_size" />

    <EditText
        android:id="@+id/input_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/output_textview"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:hint="@string/enter_text_in_range"
        android:inputType="number"
        android:maxLength="6" />

    <LinearLayout
        android:id="@+id/mode_select_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_textview"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/hint_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/give_output_in_american_version"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Switch
            android:id="@+id/mode_of_output_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/declaration"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:typeface="monospace" />

</RelativeLayout>
